--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     </div>
 
     <div class="winning-message" data-winning-message>
-        <p class="msg">X venceu!</p>
-        <button class="btn">Reiniciar</button>
+        <p class="msg" data-msg>X venceu!</p>
+        <button class="btn" data-btn>Reiniciar</button>
     </div>
 
     <script src="./script.js"></script>
